fix: add ellipsis for value overflow

--- a/packages/charts/src/chart_types/metric/renderer/dom/_text.scss
+++ b/packages/charts/src/chart_types/metric/renderer/dom/_text.scss
@@ -47,6 +47,8 @@
     font-weight: 600;
     text-align: right;
     white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   &__part {
